--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "next": "9.4.2",
+    "node-sass": "^4.14.1",
+    "random-words": "^1.1.1",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
