--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "next": "9.4.2",
     "node-sass": "^4.14.1",
     "random-words": "^1.1.1",
