--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "firebase": "^7.14.5",
     "next": "9.4.2",
     "node-sass": "^4.14.1",
     "random-words": "^1.1.1",
